# HiLabs-Hackathon-2026

./: .gitignore  Dockerfile  README.md  architecture.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run_pipeline.sh
demo/: app.py  llm_explainer.py  requirements.txt
docs/: AUDIT.md
outputs/: PRESENTATION_BULLETS.md  RESULTS_SUMMARY.md  data_quality_report.md
outputs/submission/: Team_Byelabs_R3_Accuracy_Engine.pptx  predictions.csv
outputs/track1/: confusion_matrix.csv  disagreement_taxonomy.csv  keyword_summary.csv  org_summary.csv  overview.csv  score_band_summary.csv  specialty_summary.csv  state_summary.csv  taxonomy_summary.csv  track1_overview.json  track1_summary.md
outputs/track2/: loso_cv_metrics.csv  loso_cv_summary.json  track2_cv_fold_metrics.csv  track2_cv_metrics.json  track2_metadata.json  track2_models.pkl  track2_override_summary.csv  track2_summary.md
outputs/track3/: shap_importance.csv  track3_metrics.json  track3_ranker.pkl  track3_summary.md  track3_top_calls.csv
scripts/: build_deck.js  generate_submission.py  leave_one_state_out_cv.py  predict_holdout.py  run_inference.py  run_track1.py  run_track2.py  run_track3.py
src/r3hackathon/: __init__.py  data.py  features.py  nppes.py  settings.py  track1.py  track2.py  track3.py
