[project]
name = "r3-hackathon"
version = "0.1.0"
description = "HiLabs R3 accuracy hackathon — Tracks 1, 2, and 3."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "shap>=0.43",
    "pyarrow>=14.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
]
demo = [
    "streamlit>=1.35",
    "plotly>=5.18",
    "altair>=5.0",
]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
